# golf_simulator

./: .gitignore  CMakeLists.txt  ReadMe.md
GolfSimulator/platform/mac/: CMakeLists.txt
GolfSimulator/platform/mac/src/: AppDelegate.mm  GolfBallBridge.h  GolfBallBridge.mm  ViewController.h  ViewController.mm  main.mm
GolfSimulator/src/: main.cpp
GolfSimulator/src/core/: GolfBall.cpp  GolfBall.h  GolfBall.hpp  Simulator.cpp  Simulator.h
GolfSimulator/src/graphics/Interface/: RenderEngine.h  RenderEngineFactory.h
GolfSimulator/src/graphics/metal/: MetalRenderEngine.swift  MetalRenderEngineAdapter.h  MetalRenderEngineFactory.h  MetalRenderEngineFactory.mm
GolfSimulator/src/graphics/metal/Camera/: Camera.swift
GolfSimulator/src/graphics/metal/Shader/: Shader.metal
golf_simulator/: GolfBall.cpp  GolfBall.hpp  GolfBallBridge.mm  golf_simulator-Bridging-Header.h  main.cpp
golf_simulator.xcodeproj/: project.pbxproj
golf_simulator/Camera/: Camera.swift
golf_simulator/Renderer/: GolfBallRenderer.swift
simulator/: AppDelegate.swift  ViewController.swift
simulator/Base.lproj/: Main.storyboard
simulator/Renderer/: GolfBallRenderer.swift
